[project]
name = "mcp-server-demo"
version = "0.1.0"
description = "Basic MCP Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "html2text>=2025.4.15",
    "imapclient>=3.0.1",
    "mcp[cli]>=1.6.0",
    "requests>=2.32.3",
    "selenium>=4.31.0",
    "sumy>=0.11.0",
]
